# blindfolded-tic-tac-toe

./: .gitignore  CMakeLists.txt  FindGUROBI.cmake  README.md  agent.h  board.h  board2.h  board_tests.cpp  constants.h  constants2.h  constants_tests.cpp  count_results  linear_program.cpp  matrix_generator.cpp  serializer.h  serializer_tests.cpp  simulator.cpp  state.h  state2.h  state_tests.cpp  states_counter.cpp  transpose_matrices.cpp
